--- a/src/components/templates/login.html
+++ b/src/components/templates/login.html
@@ -1,7 +1,7 @@
-<button type="button" class="btn btn-default"
+<button type="button" class="btn btn-default navbar-button"
         ng-show="!ctrl.isLoggedIn()"
         ng-click="ctrl.openLogin()" translate="">Login</button>
 
-<button type="button" class="btn btn-default"
+<button type="button" class="btn btn-default navbar-button"
         ng-show="ctrl.isLoggedIn()"
         ng-click="ctrl.logout()" translate="">Logout</button>
