--- a/src/components/templates/modelLanguageChooser.html
+++ b/src/components/templates/modelLanguageChooser.html
@@ -1,5 +1,5 @@
 <div class="btn-group" uib-dropdown is-open="status.isopen">
-  <button id="single-button" type="button" class="btn btn-default" uib-dropdown-toggle ng-disabled="disabled">
+  <button id="single-button" type="button" class="btn btn-default navbar-button" uib-dropdown-toggle ng-disabled="disabled">
     {{currentLanguage()}} <span class="caret"></span>
   </button>
   <ul class="dropdown-menu" role="menu">
