--- a/src/components/templates/model.scss
+++ b/src/components/templates/model.scss
@@ -45,7 +45,7 @@ $navbarWidth: 275px;
     li {
       padding-left: 10px;
       font-size: medium;
-      margin-top: 5px;
+      padding-top: 5px;
       border: 1px solid #fff;
     }
 
