--- a/src/app.scss
+++ b/src/app.scss
@@ -31,7 +31,6 @@
 
 .editable-buttons {
   float: right;
-  margin-right: 10%;
   button {
     text-align: right;
   }
@@ -66,11 +65,12 @@
     height: 400px;
 
     .search-result {
+      font-size: small;
       cursor: pointer;
       background-color: #f5f5f5;
-      border: none;
-      border-radius: 4px;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+      border: 1px solid #ddd;
+      margin-top: 10px;
+      padding-left: 10px;
 
       &.selected {
         background-color: #ffffff;
