--- a/src/components/templates/attributeView.html
+++ b/src/components/templates/attributeView.html
@@ -1,4 +1,10 @@
 <editable-form on-submit="ctrl.updateAttribute()" on-reset="ctrl.resetModel()" ng-hide="ctrl.loading">
+
+  <div class="top-actions">
+    <editable-form-buttons></editable-form-buttons>
+    <show-submit-error></show-submit-error>
+  </div>
+
   <form-input title="{{'Label' | translate}}" content="ctrl.attribute.label"></form-input>
   <form-id title="{{'Id' | translate}}" plain-text="ctrl.attribute['@id']"></form-id>
   <form-input title="{{'Comment' | translate}}" content="ctrl.attribute.comment"></form-input>
