--- a/src/components/templates/modelView.html
+++ b/src/components/templates/modelView.html
@@ -7,7 +7,9 @@
 
   <div class="row">
     <div class="col-md-6">
-      <form-input title="{{'Label' | translate}}" content="ctrl.model.label"></form-input>
+      <h2>
+        <form-input content="ctrl.model.label"></form-input>
+      </h2>
       <form-input title="{{'Comment' | translate}}" content="ctrl.model.comment"></form-input>
       <div class="model-view__title" translate>Id</div>
       <div>{{ctrl.model['@id']}}</div>
