--- a/src/components/templates/editInProgressModal.html
+++ b/src/components/templates/editInProgressModal.html
@@ -1,15 +1,15 @@
 <div class="modal-header modal-header-confirm">
   <h4 class="modal-title ng-binding">
-    <span translate>Muokkaaminen on kesken</span>
+    <span translate>Edit in progress</span>
     <a type="button" title="Close" data-dismiss="modal"><i ng-click="ctrl.cancel()" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
   </h4>
 </div>
 
 <div class="modal-body">
-  <p translate>Oletko varma, että haluat siirtyä?</p>
+  <p translate>Are you sure that you want to cancel edit?</p>
 </div>
 
 <div class="modal-footer">
-  <button class="btn btn-default" type="button" ng-click="ctrl.ok()" translate>Kyllä</button>
-  <button class="btn btn-primary" type="button" ng-click="ctrl.cancel()" translate>Peruuta</button>
+  <button class="btn btn-default" type="button" ng-click="ctrl.ok()" translate>Yes</button>
+  <button class="btn btn-primary" type="button" ng-click="ctrl.cancel()" translate>Cancel</button>
 </div>
