--- a/src/components/templates/showSubmitError.html
+++ b/src/components/templates/showSubmitError.html
@@ -1,4 +1,4 @@
 <div class="alert alert-danger" role="alert" ng-show="formController.submitError">
   <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-  <span translate>Tallentaminen epäonnistui</span>
+  <span translate>Save failed</span>
 </div>
