--- a/src/components/templates/login-modal.html
+++ b/src/components/templates/login-modal.html
@@ -1,16 +1,16 @@
 <div class="modal-header modal-header-confirm">
   <h4 class="modal-title ng-binding">
-    <span translate>Kirjautuminen</span>
+    <span translate>Login</span>
     <a type="button" title="Close" data-dismiss="modal"><i ng-click="ctrl.close()" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
   </h4>
 </div>
 
 <div class="modal-body">
-  <p translate>eDuuni tietoa</p>
-  <p translate>kirjautuminen tietoa</p>
+  <p translate>eDuuni information</p>
+  <p translate>Login information</p>
 </div>
 
 <div class="modal-footer">
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.login()" translate>Kirjaudu</button>
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.register()" translate>Luo tunnukset</button>
+  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.login()" translate>Login</button>
+  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.register()" translate>Register</button>
 </div>
