--- a/src/components/templates/searchPredicateModal.html
+++ b/src/components/templates/searchPredicateModal.html
@@ -1,20 +1,18 @@
 <div class="modal-header modal-header-confirm">
   <h4 class="modal-title ng-binding">
-    <span translate>Hae ominaisuuksia</span>
+    <span translate>Search predicates</span>
     <a type="button" title="Close" data-dismiss="modal"><i ng-click="ctrl.close()" class="glyphicon glyphicon-remove icon-arrow-right pull-right"></i></a>
   </h4>
 </div>
 
 <div class="modal-body search-modal">
-  <p>
-    Haen ensin tarvitsemaasi ominaisuutta yhteentoimivuuden kuvauksista. Jos et löydä tarpeisiisi sopivaa, voit luoda uuden ominaisuuden.
-  </p>
+  <p translate>Search predicate info</p>
 
   <div class="row">
 
     <div class="col-md-4">
       <div class="input-group input-group-lg">
-        <input autofocus type="text" class="form-control" placeholder="Hae ominaisuutta..."
+        <input autofocus type="text" class="form-control" placeholder="{{'search predicate' | translate}}"
                ng-model="ctrl.searchText"
                ng-model-options="{ debounce: { 'default': 500, 'blur': 0 } }" />
         <i class="glyphicon glyphicon-search form-control-feedback"></i>
@@ -23,7 +21,7 @@
       <div class="input-group input-group-lg">
         <div class="selectContainer">
           <select class="form-control" ng-model="ctrl.modelId">
-            <option value="" translate>Kaikki kirjastot</option>
+            <option value="" translate>All models</option>
             <option ng-repeat="model in ctrl.models" value="{{model['@id']}}">{{model | translateLabel}}</option>
           </select>
         </div>
@@ -32,7 +30,7 @@
       <div class="input-group input-group-lg">
         <div class="selectContainer">
           <select class="form-control" ng-model="ctrl.type">
-            <option value="" translate>Kaikki tyypit</option>
+            <option value="" translate>All types</option>
             <option ng-repeat="type in ctrl.types" value="{{type}}">{{type | translate}}</option>
           </select>
         </div>
@@ -58,6 +56,6 @@
 </div>
 
 <div class="modal-footer">
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Peruuta</button>
-  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedPredicate" translate>{{ctrl.confirmButtonText}}</button>
+  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.close()" translate>Cancel</button>
+  <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.confirm()" ng-disabled="!ctrl.selectedPredicate" translate>Use predicate</button>
 </div>
