Style and consistency fixes

--- a/src/app.scss
+++ b/src/app.scss
@@ -11,8 +11,7 @@
 }
 
 .navbar-right {
-  margin-right: 0;
-  margin-top: 5px;
+  margin: 5px;
 }
 
 .navbar-nav li {
@@ -93,6 +92,7 @@ a.accordion-toggle {
 body {
   padding: 10px;
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .iow-panel {
