--- a/src/components/templates/modelView.html
+++ b/src/components/templates/modelView.html
@@ -10,9 +10,9 @@
       <h2>
         <form-input content="ctrl.model.label"></form-input>
       </h2>
-      <form-input title="{{'Comment' | translate}}" content="ctrl.model.comment"></form-input>
       <div class="model-view__title" translate>Id</div>
       <div>{{ctrl.model['@id']}}</div>
+      <form-text-area title="{{'Comment' | translate}}" content="ctrl.model.comment"></form-text-area>
     </div>
 
     <div class="col-md-6">
