--- a/src/components/templates/classView.html
+++ b/src/components/templates/classView.html
@@ -11,13 +11,14 @@
     <form-input content="ctrl.class.label"></form-input>
   </h2>
   <form-id title="{{'Id' | translate}}" plain-text="ctrl.class['@id']"></form-id>
+  <form-text-area title="{{'Comment' | translate}}" content="ctrl.class.comment"></form-text-area>
   <div ng-show="ctrl.class.subClassOf">
     <div class="model-view__title" translate>Superclass</div>
     <div>{{ctrl.class.subClassOf}}</div>
   </div>
   <div class="model-view__title" translate>Is defined by</div>
   <div>{{ctrl.class.isDefinedBy}}</div>
-  <form-text-area title="{{'Description' | translate}}" content="ctrl.class.comment"></form-text-area>
+
 
   <uib-accordion close-others="true">
     <uib-accordion-group ng-repeat="property in ctrl.class.property" is-open="isOpen[property['@id']]">
