--- a/src/components/templates/model.scss
+++ b/src/components/templates/model.scss
@@ -43,9 +43,8 @@ $navbarWidth: 275px;
 
   .panel__list {
     li {
-      padding-left: 10px;
+      padding: 5px 0 5px 10px;
       font-size: medium;
-      padding-top: 5px;
       border: 1px solid #fff;
     }
 
