--- a/src/app.scss
+++ b/src/app.scss
@@ -10,6 +10,14 @@
   display: none !important;
 }
 
+.top {
+  padding: 15px;
+}
+
+.bottom {
+  border-top: solid 1px #ddd;
+}
+
 .navbar-right {
   margin: 5px;
 }
