--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -1,6 +1,8 @@
 <div ng-if="!ctrl.loading">
 
-  <model-view model="ctrl.model"></model-view>
+  <div class="top">
+    <model-view model="ctrl.model"></model-view>
+  </div>
 
   <div class="bottom">
     <div class="model-panel--left">
