Consistent styles to group page

--- a/src/components/templates/group.html
+++ b/src/components/templates/group.html
@@ -1,11 +1,14 @@
-<h2>{{group | translateLabel}}</h2>
+<div class="top">
 
-<div ng-show="isLoggedIn() && notInGroup()" class="pull-right">
-  <a class="btn btn-default" href="{{group['@id']}}" target="_blank">Pyydä käyttöoikeuksia ryhmään</a>
+  <div ng-show="isLoggedIn() && notInGroup()" class="top-actions">
+    <a class="btn btn-default" href="{{group['@id']}}" target="_blank">Pyydä käyttöoikeuksia ryhmään</a>
+  </div>
+
+  <h2>{{group | translateLabel}}</h2>
+
+  <ul>
+    <li ng-repeat="model in models">
+      <a href="#/models/?urn={{model['@id'] | urlencode}}">{{model | translateLabel}}</a>
+    </li>
+  </ul>
 </div>
-
-<ul>
-  <li ng-repeat="model in models">
-    <a href="#/models/?urn={{model['@id'] | urlencode}}">{{model | translateLabel}}</a>
-  </li>
-</ul>
