--- a/src/app.scss
+++ b/src/app.scss
@@ -11,7 +11,7 @@
 }
 
 .top {
-  padding: 15px;
+  padding: 0 15px 15px 15px;
 }
 
 .bottom {
@@ -36,15 +36,8 @@
   background-color: #f5f5f5;
 }
 
-.editable-buttons {
-  float: right;
-  button {
-    float: right;
-  }
-}
-
 .top-actions {
-  button {
+  button, a {
     float: right;
     margin-left: 5px;
   }
