--- a/src/components/templates/searchClassModal.html
+++ b/src/components/templates/searchClassModal.html
@@ -6,6 +6,14 @@
 </div>
 
 <div class="modal-body search-modal">
+
+  <div class="top-actions">
+    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.createNewClass()">
+      <span class="glyphicon glyphicon-plus"></span>
+      {{'Create new class' | translate}}
+    </button>
+  </div>
+
   <p translate>Class search info</p>
 
   <div class="row">
