--- a/src/components/templates/searchClassModal.html
+++ b/src/components/templates/searchClassModal.html
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div class="col-md-4 search-results">
+    <div class="col-md-4 search-results" window-height padding="320">
       <div ng-repeat="class in ctrl.searchResults() track by class['@id']">
         <div ng-class="['search-result', {selected: ctrl.isSelected(class)}]" ng-click="ctrl.selectClass(class)">
           <h5>{{class | translateLabel}}</h5>
