--- a/src/components/templates/searchClassConceptModal.html
+++ b/src/components/templates/searchClassConceptModal.html
@@ -10,7 +10,7 @@
 
     <label for="concept" translate>Concept</label>
     <div class="input-group input-group-md">
-      <input id="concept" type="text" class="form-control" autofocus iow-typeahead options="ctrl.options" datasets="ctrl.datasets" required ng-model="ctrl.concept" placeholder="Hae sanastosta..."/>
+      <input id="concept" type="text" class="form-control" autofocus iow-typeahead options="ctrl.options" datasets="ctrl.datasets" required ng-model="ctrl.concept" placeholder="{{'Search from concept database' | translate}}"/>
       <i class="glyphicon glyphicon-search form-control-feedback"></i>
     </div>
 
