--- a/src/components/templates/searchClassModal.html
+++ b/src/components/templates/searchClassModal.html
@@ -8,7 +8,7 @@
 <div class="modal-body search-modal">
 
   <div class="top-actions">
-    <button type="button" class="btn btn-default btn-lg" ng-click="ctrl.createNewClass()">
+    <button type="button" class="btn btn-default btn-md" ng-click="ctrl.createNewClass()">
       <span class="glyphicon glyphicon-plus"></span>
       {{'Create new class' | translate}}
     </button>
