--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -27,6 +27,9 @@
           <uib-tab-heading>
             <i class="glyphicon glyphicon-tasks"></i><p>{{'Attributes' | translate}}</p>
           </uib-tab-heading>
+
+          <button ng-show="ctrl.isLoggedIn()" type="button" class="btn btn-default btn-md add-class-button" ng-click="ctrl.addPredicate('owl:DatatypeProperty')" translate>Add attribute</button>
+
           <ul class="panel__list" window-height padding="93">
             <li ng-repeat="attribute in ctrl.attributes | orderByLabel"
                 ng-class="{'model-panel__selection': ctrl.isSelected('attribute', attribute['@id'])}"
@@ -39,6 +42,9 @@
           <uib-tab-heading>
             <i class="glyphicon glyphicon-sort"></i><p>{{'Associations' | translate}}</p>
           </uib-tab-heading>
+
+          <button ng-show="ctrl.isLoggedIn()" type="button" class="btn btn-default btn-md add-class-button" ng-click="ctrl.addPredicate('owl:ObjectProperty')" translate>Add association</button>
+
           <ul class="panel__list" window-height padding="93">
             <li ng-repeat="association in ctrl.associations | orderByLabel"
                 ng-class="{'model-panel__selection': ctrl.isSelected('association', association['@id'])}"
