IE scrolling fix

--- a/src/components/templates/model.html
+++ b/src/components/templates/model.html
@@ -56,7 +56,7 @@
       </uib-tabset>
     </div>
 
-    <div class="model-panel--right">
+    <div class="model-panel--right" window-height="min">
       <class-view id="ctrl.selected.id" ng-if="ctrl.selected.type === 'class'"></class-view>
       <attribute-view id="ctrl.selected.id" ng-if="ctrl.selected.type === 'attribute'"></attribute-view>
       <association-view id="ctrl.selected.id" ng-if="ctrl.selected.type === 'association'"></association-view>
