--- a/src/components/templates/associationView.html
+++ b/src/components/templates/associationView.html
@@ -1,6 +1,6 @@
 <editable-form on-submit="ctrl.updateAssociation()" on-reset="ctrl.resetModel()">
 
-  <div class="top-actions" float="top-actions-placeholder" float-top="8">
+  <div class="top-actions" float="top-actions-placeholder" top-offset="8">
     <editable-form-buttons></editable-form-buttons>
     <show-submit-error></show-submit-error>
   </div>
