--- a/src/components/templates/attributeView.html
+++ b/src/components/templates/attributeView.html
@@ -1,6 +1,6 @@
 <editable-form on-submit="ctrl.updateAttribute()" on-reset="ctrl.resetModel()" ng-hide="ctrl.loading">
 
-  <div class="top-actions" float="top-actions-placeholder" float-top="8">
+  <div class="top-actions" float="top-actions-placeholder" top-offset="8">
     <editable-form-buttons></editable-form-buttons>
     <show-submit-error></show-submit-error>
   </div>
